feat 215 : 백엔드 코드 수정(하드 코딩 변수 제거, 테스트 코드, 이미지 업로드 경로 생성, 사이즈 제한) (#5)